create github pages

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     <p class="mbr-text mbr-fonts-style display-5">I'm Pramoth Guhan currently studying in Madras Institute of Technology at Chennai, Tamil Nadu, and India. I'm an average student who is very much interested in automobiles and I also make sure that I live the present and I don't keep worrying much about what's goanna happen next.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="index.html#social-buttons2-u">CONTACT</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">HOME</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="https://pramothguhan.zyrosite.com/">HOME</a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
